<?xml version="1.0" encoding="utf-8"?>
<!-- StopWatchFragment.java用 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_weight="1.0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="64sp"
        android:textStyle="bold"
        android:id="@+id/timerLabel"
        android:text="@string/timer_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.5"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:gravity="center"
    >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/start_label"
            android:id="@+id/startButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/stop_label"
            android:id="@+id/stopButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/reset_label"
            android:id="@+id/resetButton"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/rap_label"
            android:id="@+id/rapButton"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/myListView"
        android:layout_weight="1.2"></ListView>

</LinearLayout>