<?xml version="1.0" encoding="utf-8"?>
<!-- OmikujiFragment.java用 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="24dp"
        android:text="@string/omikuji_label"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:id="@+id/myTextView"
        android:text="@string/score_label"/>

    <Button
        android:id="@+id/omikujiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:onClick="getOmikuji"
        android:text="@string/draw_button"/>

</LinearLayout>