<?xml version="1.0" encoding="utf-8"?>
<!-- BMIFragment.java用 -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/height"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Space android:layout_width="25dip"
               android:layout_height="match_parent"/>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:inputType="text"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/heightSpinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/weight"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Space
            android:layout_width="25dip"
            android:layout_height="match_parent"/>


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:inputType="text"/>

    </LinearLayout>

    <Spinner android:id="@+id/weightSpinner"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="75dp"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/button_design"
        android:shadowColor="#A4A3A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/calc"
        android:textColor="@color/buttonColor"
        android:textSize="20sp"/>

</LinearLayout>